Added CSS and id attributes so the panels for each row maintain the same size

--- a/appserver/static/_dashboard.css
+++ b/appserver/static/_dashboard.css
@@ -122,3 +122,11 @@ div.action-header img {
     text-rendering: optimizelegibility;
 }
 
+div#learn_more_row1 div.dashboard-panel {
+    height: 150px;
+}
+
+div#learn_more_row3 div.dashboard-panel {
+    height: 170px;
+}
+
