--- a/default/data/ui/views/interests.xml
+++ b/default/data/ui/views/interests.xml
@@ -1,14 +1,66 @@
 <dashboard hideExport="true" hideTitle="true" version="1.1">
   <label>Interests</label>
+
+  <row><panel><html><div class="row-header"><span class="row-header-text">Data Insider</span></div></html></panel></row>
   <row id="interests_row1">
     <panel>
       <html>
-          PANEL 1
+          <div id="insider_it_panel"></div>
       </html>
     </panel>
     <panel>
       <html>
-          PANEL 2
+          <div id="insider_security_panel"></div>
+      </html>
+    </panel>
+  </row>
+  <row id="interests_row2">
+    <panel>
+      <html>
+          <div id="insider_data_panel"></div>
+      </html>
+    </panel>
+    <panel>
+      <html>
+          <div id="insider_tech_panel"></div>
+      </html>
+    </panel>
+  </row>
+
+  <row><panel><html><div class="row-header"><span class="row-header-text">Blog Articles</span></div></html></panel></row>
+  <row id="interests_row3">
+    <panel>
+      <html>
+          <div id="blog_devops_panel"></div>
+      </html>
+    </panel>
+    <panel>
+      <html>
+          <div id="blog_it_panel"></div>
+      </html>
+    </panel>
+  </row>
+  <row id="interests_row4">
+    <panel>
+      <html>
+          <div id="blog_security_panel"></div>
+      </html>
+    </panel>
+    <panel>
+      <html>
+          <div id="blog_platform_panel"></div>
+      </html>
+    </panel>
+  </row>
+  <row id="interests_row5">
+    <panel>
+      <html>
+          <div id="blog_tt_panel"></div>
+      </html>
+    </panel>
+    <panel>
+      <html>
+          <div id="blog_events_panel"></div>
       </html>
     </panel>
   </row>
