--- a/default/data/ui/views/stay_current.xml
+++ b/default/data/ui/views/stay_current.xml
@@ -27,7 +27,7 @@
     </panel>
   </row>
 
-  <row><panel><html><div class="row-header"><span class="row-header-text">Blog Articles</span></div></html></panel></row>
+  <row><panel><html><div class="row-header"><span class="row-header-text">Blogs</span></div></html></panel></row>
   <row id="interests_row3">
     <panel>
       <html>
@@ -55,7 +55,7 @@
   <row id="interests_row5">
     <panel>
       <html>
-          <div id="blog_tt_panel"></div>
+          <div id="blog_tips_and_tricks_panel"></div>
       </html>
     </panel>
     <panel>
