Added check for Splunk 8.x+ in JS code. Will show a warning on Stay Current dashboard if less than 8.x

--- a/appserver/static/dashboard.css
+++ b/appserver/static/dashboard.css
@@ -150,5 +150,14 @@ span.row-header-text {
     display: inline-block;
 }
 
+div#version_warning,
+.hidden {
+    display: none;
+}
 
+.version-warning {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
 
