--- a/default/data/ui/views/stay_current.xml
+++ b/default/data/ui/views/stay_current.xml
@@ -1,6 +1,10 @@
 <dashboard hideExport="true" hideTitle="true" version="1.1">
   <label>Stay Current</label>
 
+  <row id="version_warning"><panel><html><div class="version-warning">
+    This dashboard is only supported under Splunk version 8.x+   
+  </div></html></panel></row>
+
   <row><panel><html><div class="row-header"><span class="row-header-text">Data Insider</span></div></html></panel></row>
   <row id="interests_row1">
     <panel>
