--- a/default/data/ui/views/stay_current.xml
+++ b/default/data/ui/views/stay_current.xml
@@ -9,30 +9,18 @@
   <row id="interests_row1">
     <panel>
       <html>
-          <div id="insider_it_panel"></div>
+          <div id="insider_left_panel"></div>
       </html>
     </panel>
     <panel>
       <html>
-          <div id="insider_security_panel"></div>
-      </html>
-    </panel>
-  </row>
-  <row id="interests_row2">
-    <panel>
-      <html>
-          <div id="insider_data_panel"></div>
-      </html>
-    </panel>
-    <panel>
-      <html>
-          <div id="insider_tech_panel"></div>
+          <div id="insider_right_panel"></div>
       </html>
     </panel>
   </row>
 
   <row><panel><html><div class="row-header"><span class="row-header-text">Blogs</span></div></html></panel></row>
-  <row id="interests_row3">
+  <row id="interests_row2">
     <panel>
       <html>
           <div id="blog_devops_panel"></div>
@@ -44,7 +32,7 @@
       </html>
     </panel>
   </row>
-  <row id="interests_row4">
+  <row id="interests_row3">
     <panel>
       <html>
           <div id="blog_security_panel"></div>
@@ -56,7 +44,7 @@
       </html>
     </panel>
   </row>
-  <row id="interests_row5">
+  <row id="interests_row4">
     <panel>
       <html>
           <div id="blog_tips_and_tricks_panel"></div>
